VsCode | Codegate01 | spring-security | Concluída Permissões

--- a/spring-security/src/main/resources/templates/admin.html
+++ b/spring-security/src/main/resources/templates/admin.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Index</title>
+<title>Admin</title>
 </head>
 <body>
-	<h1>Bem vindo ao mundo Spring Boot</h1>
+	<h1>Bem vindo Administrador!</h1>
 </body>
 </html>
