Eclipse | Codegate01 | spring-security | Concluída Autent. DB.

--- a/spring-security/src/main/resources/templates/secure.html
+++ b/spring-security/src/main/resources/templates/secure.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Index</title>
+<title>Secure</title>
 </head>
 <body>
-	<h1>Insecure Page</h1>
-	<a href="/secure">Secure Page</a>
+	<h1>Secure Page</h1>
+	<a href="/logout">Logout</a>
 </body>
 </html>
