Curso de Formação Alura Spring Framework - Update Unifor 2

--- a/fragments/src/main/resources/templates/base.html
+++ b/fragments/src/main/resources/templates/base.html
@@ -20,12 +20,12 @@ body {
 	<div th:fragment="navlinks" style="margin-bottom: 20px">
 
 		<ul class="nav justify-content-center">
-			<li class="nav-item"><a class="nav-link active" href="/">Home</a>
+			<li class="nav-item"><a class="nav-link active" href="/fragments/">Home</a>
 			</li>
-			<li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
-			<li class="nav-item"><a class="nav-link" href="/contact">Contacto</a>
+			<li class="nav-item"><a class="nav-link" href="/fragments/blog">Blog</a></li>
+			<li class="nav-item"><a class="nav-link" href="/fragments/contact">Contacto</a>
 			</li>
-			<li class="nav-item"><a class="nav-link disabled" href="#"
+			<li class="nav-item"><a class="nav-link disabled" href="/fragments/#"
 				tabindex="-1" aria-disabled="true">Login</a></li>
 		</ul>
 
